--- a/web/src/main/javascript/help-tooltips/css/help-tooltips.css
+++ b/web/src/main/javascript/help-tooltips/css/help-tooltips.css
@@ -1,4 +1,4 @@
-.gxaHelpTooltip {
+.gxaWebpackHelpTooltip {
     background: #fafafa;
     border: 1px solid #2777A5 !important;
     padding: 4px;
@@ -9,23 +9,11 @@
     box-shadow: 0 0 7px gray;
 }
 
-/* JQuery UI overrides: start */
-.ui-tooltip {
-    background: #FAFAFA;
-    border: 1px solid #2777A5 !important;
-    padding: 4px;
-    max-width: 400px !important;
-    color: #2777A5;
-    border-radius: 4px;
-    font: 10px Verdana, Helvetica, Arial, sans-serif;
-    box-shadow: 0 0 7px gray;
-}
-
-.ui-button {
+.gxaWebpackHelpTooltip .ui-button {
     border-bottom: 1px solid #cccccc !important;
 }
 
-.ui-button:hover, .ui-button:active {
+.gxaWebpackHelpTooltip .ui-button:hover, .gxaWebpackHelpTooltip .ui-button:active {
     border: 1px solid #fbd850 !important;
 }
 
@@ -33,14 +21,14 @@
 
 /****  STYLING FOR BUTTONS IN GENE SET TYPE ANALYSIS PLOTS *****/
 
-#reactomeButtonID.tool-item:last-child {
+.gxaWebpackHelpTooltip #reactomeButtonID.tool-item:last-child {
     border-bottom: 1px;
 }
 
 /**** END ANALYSIS PLOTS STYLING **/
 
 /* help tooltip */
-a.help-icon {
+.gxaWebpackHelpTooltip a.help-icon {
     color: rgb(255, 82, 0) !important;
     vertical-align: top;
     font-size: 10px !important;
